--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 .Nav-title{
     color: #181818;
@@ -40,3 +41,18 @@ nav a {
     text-decoration: none;
     color: #474747;
 }
+
+/*header desing*/
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px ;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 450px;
+}
+
+
