--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -14,6 +14,17 @@ body{
     font-weight: 700;
     padding: 15px 34px;
 }
+.sectio-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-descripction{
+    color: #757575;
+    text-align: center;
+    font-size: 10px;
+}
 
 
 nav{
@@ -45,14 +56,38 @@ nav a {
 /*header desing*/
 .header{
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px ;
+    padding: 30px 30px 0px 150px ;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+max-width: 500px;
 }
 .banner .profile-pic{
     width: 450px;
 }
+.banner-greating{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom:0 ;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
 
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
+}
 
