--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -83,11 +83,22 @@ max-width: 500px;
     margin-bottom: 20px;
     margin-top: 5px;
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 .about{
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px;
+}
+.about-info-continer{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
 
