--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -87,6 +87,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 .about{
     padding: 130px;
@@ -101,7 +104,30 @@ main{
 .about-info{
     text-align: center;
 }
-#what-i do{
+
+#what-i-do{
     padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0,0.6);
+    
+}
+.skill-description{
+color: #757575;
+}
+
+.resume-coloum-titlle{
+    color: #474747;
+    font-size: 30px;
+    font-size: normal;
+    font-weight: 700;
+
 }
 
