--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -130,4 +130,29 @@ color: #757575;
     font-weight: 700;
 
 }
+.resume-container{
+    display: flex;
+    gap: 70px;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 10px;
+} 
+.resume-item-description{
+    color: #757575;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
 
