--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -156,3 +156,10 @@ color: #757575;
     margin-top: 50px;
 }
 
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+
