--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -158,8 +158,28 @@ color: #757575;
 
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     margin-top: 100px;
     padding: 130px 200px;
 }
+.footer-coloum{
+    width: 50%;
+}
+.social-link{
+    margin-right: 30px;
+}
+.contact input[type="text"], .contact input[type="email"], 
+textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    border-radius: 5px;
+    color: #757575;
+    background: #FFF;
+     border: 0px;
+     width: 100%;
+
+}
+
 
