--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -1,185 +1,248 @@
-body{
+/* common shared styles */
+body {
     font-family: 'lato', sans-serif;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
-.text-primary{
- color: #FD6E0A;
+
+/* nav related styles */
+.Text-primary {
+    color: #FD6E0A;
 }
-.btn-primary{
-    background: #FD6E0A;
+
+.btn-primary {
+
     border-radius: 5px;
-    border: 0;
-    color: white;
+    background: #FD6E0A;
+    border: 0px;
+    color: #FFF;
+    font-family: "Open Sans";
     font-size: 20px;
     font-weight: 700;
-    padding: 15px 34px;
-}
-.sectio-title{
-    color: #181818;
-    text-align: center;
-    font-size: 35px;
-    font-weight: 700;
-}
-.section-descripction{
-    color: #757575;
-    text-align: center;
-    font-size: 10px;
-}
+    padding: 15px 30px;
 
 
-nav{
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 200px;
+    margin: 0px 200px;
+
 }
-.Nav-title{
+
+
+.nav-title {
     color: #181818;
     font-size: 45px;
     font-weight: 800;
-    
+
 }
-nav >ul{
+
+nav>ul {
     display: flex;
     align-items: center;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-right: 50px;
-
 }
+
 nav a {
     text-decoration: none;
     color: #474747;
 }
 
-/*header desing*/
-.header{
-    background-color: #FFF8F3;
-    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+/* header related color */
+.header-class {
+    background: #FFF8F3;
+    background-image: url(../images/header_bg.png);
     background-repeat: no-repeat;
-    background-position: bottom right, top left;
+    background-position: bottom right;
+    background-size: 53%;
 }
-.banner{
-    padding: 30px 30px 0px 150px ;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.banner-content{
-max-width: 500px;
+
+.banner-content {
+    max-width: 500px;
 }
-.banner .profile-pic{
-    width: 450px;
+
+.banner .Profile-picture {
+    width: 500px;
+    height: 600px;
 }
-.banner-greating{
-    font-size: 45px;
+
+.banner-greating {
+    font-size: 40px;
     color: #474747;
-    margin-bottom:0 ;
+    margin-bottom: 0;
+
 }
-.banner-title{
-    font-size: 85px;
+
+.baner-title {
+    font-size: 55px;
     font-weight: 700;
-    margin-bottom: 20px;
+    color: #181818;
     margin-top: 5px;
+    margin-bottom: 20px;
 }
-main{
+
+.banner-paragraph {
+    margin-bottom: 20px;
+}
+
+/* main section style */
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
-main section{
+
+main section {
     margin-top: 130px;
 }
 
-.about{
+/* about section desing */
+.about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px 0px;
+    margin-top: 130px;
 }
-.about-info-continer{
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
 
-#what-i-do{
+/* what i do related style */
+#what-i-do-description {
     padding: 30px 150px;
 }
-.skills-container{
+
+.skills-container {
     display: flex;
     gap: 24px;
 }
-.skill{
+
+.skill {
     padding: 30px;
+
     border-radius: 5px;
     background: #FFF;
-    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0,0.6);
-    
-}
-.skill-description{
-color: #757575;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 
-.resume-coloum-titlle{
+.sill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* resume section style */
+.resume-column-title {
     color: #474747;
     font-size: 30px;
-    font-size: normal;
+    font-style: normal;
     font-weight: 700;
 
 }
-.resume-container{
+
+.resume-container {
     display: flex;
     gap: 70px;
 }
-.resume-container hr{
-    margin: 30px;
+
+.resume-item-description {
+    color: #757575;
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+
 }
-.resume-item-title{
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 20px;
+    margin-top: 0px
+}
+
+;
+
+.resume-item-title {
     color: #474747;
     font-size: 25px;
+    font-style: normal;
     font-weight: 700;
+    line-height: normal;
     margin-bottom: 10px;
 }
-.resume-item-institute{
-    color: #757575;
-    margin-bottom: 20px;
-    margin-top: 10px;
-} 
-.resume-item-description{
-    color: #757575;
+
+.resume-container hr {
+    margin: 5px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
 
-footer{
+/* footer style */
+footer {
     display: flex;
     gap: 100px;
     background: #FFF8F3;
-    margin-top: 100px;
     padding: 130px 200px;
+    margin-top: 100px;
 }
-.footer-coloum{
+
+.footer-column {
     width: 50%;
 }
-.social-link{
-    margin-right: 30px;
+
+.social-links a {
+
+    margin-right: 20px;
 }
-.contact input[type="text"], .contact input[type="email"], 
-textarea{
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+textarea {
     display: block;
     margin-bottom: 25px;
     padding: 18px 35px;
-    border-radius: 5px;
     color: #757575;
+    border-radius: 5px;
     background: #FFF;
-     border: 0px;
-     width: 100%;
-
+    border: 0px;
+    width: 100%;
 }
-
-
