--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -57,10 +57,10 @@ nav a {
 /* header related color */
 .header-class {
     background: #FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-repeat: no-repeat;
-    background-position: bottom right;
-    background-size: 53%;
+    background-position: bottom right, top left;
+    
 }
 
 .banner {
