--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -246,3 +246,66 @@ textarea {
     border: 0px;
     width: 100%;
 }
+/* resposive styles */
+/* mobile devices  */
+.hide{
+    display: none;
+}
+@media screen and (max-width: 576px) {
+    .header-class{
+        background-image: none;
+    }
+    .skills-container{
+        flex-direction: column;
+    }
+    #what-i-do-description{
+        padding: 20px;
+    }
+    .resume-container{
+        flex-direction: column;
+    }
+    footer{
+        flex-direction: column;
+        padding: 10px;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    .contact-form input[type="text"],
+.contact-form input[type="email"],
+textarea{
+    width: 80%;
+}
+.about-info-container{
+    flex-direction: column;
+}
+.about{
+    padding: 10px;
+}
+.banner{
+    flex-direction: column;
+    padding: 20px;
+}
+nav{
+    flex-direction: column;
+}
+.banner .Profile-picture{
+    width: 100%;
+    height: 100%;
+}
+nav>ul{
+    flex-direction: column;
+    gap: 10px;
+}
+.btn-primary{
+    margin-bottom: 15px;
+}
+}
+@media screen and (min-width:576px) and (max-width:960px) {
+    footer {
+        padding: 30px;
+    }
+    .btn-primary{
+        margin-bottom: 15px;
+    }
+}
